# sbombardier

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  tailwind.config.ts
backend/: install_ml_deps.py  pyproject.toml  requirements.txt
backend/sbombardier/: __init__.py  main.py
backend/sbombardier/compliance/audit/: audit_trail.py
backend/sbombardier/compliance/integrations/: ci_integration.py
backend/sbombardier/compliance/policies/: policy_engine.py
backend/sbombardier/compliance/policies/rego/: gdpr_compliance.rego  license_compatibility.rego
backend/sbombardier/compliance/reports/: report_generator.py
backend/sbombardier/core/: sbom_generator.py
backend/sbombardier/ml/data/: collectors.py
backend/sbombardier/ml/models/: risk_models.py
backend/sbombardier/ml/training/: train.py
backend/sbombardier/risk/: predictor.py
backend/sbombardier/scanners/: dependency_scanner.py
backend/sbombardier/utils/: package_manager.py
backend/sbombardier/validators/: sbom_validator.py
src/: index.css
src/pages/: Index.tsx
